--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -1,5 +1,6 @@
-<h1>Community:</h1>
-<br>
-<div class="grid-container">
-	<app-card *ngFor="let card of community" [card]="card"></app-card><br />
-</div>
+<p-card>
+	<h1>Community:</h1>
+	<div class="grid-container">
+		<app-card *ngFor="let card of community" [card]="card"></app-card><br />
+	</div>
+</p-card>
