--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,5 +26,37 @@
 
 .content-wrapper {
     width: 1000px;
-    margin: auto;
+    margin-left: calc(50% - 50%/2);
+    margin-top: 25vh;
+}
+
+.title {
+	background-color: #333;
+    color: white;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+	justify-content: center;
+	font-size: 4rem;
+	border-radius: 10px;
+}
+
+.general-content {
+	border-radius: 5px;
+	width: 50vw;
+	max-height:50vh;
+	background-color: #333;
+	padding: 25px;
+	/* padding-top: 5px; */
+	text-align: center;
+}
+
+h1 {
+	font-size: 50px;
+	font-weight: bold;
+	font-style: italic;
+}
+
+h2 {
+	font-size: 30px;
 }
