--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,6 +1,7 @@
-<div class="content-wrapper">
-	<h1>Player {{ player.id }}: ({{ player.name }})</h1><br>
-	<div class="grid-container">
-		<app-card *ngFor="let card of player.hand" [card]="card"></app-card><br><br>
-	</div>
-</div>
+<p-card header="Player {{ player.id }}: ({{ player.name }})">
+	<!-- <div class="content-wrapper"> -->
+		<div class="grid-container">
+			<app-card *ngFor="let card of player.hand" [card]="card"></app-card><br><br>
+		</div>
+	<!-- </div> -->
+</p-card>
