--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeng/resources/themes/fluent-light/theme.css";
 @import "primeng/resources/primeng.css";
+
+.general-content {
+	border-radius: 20px;
+	background-color: #333;
+	padding: 25px;
+	text-align: center;
+}
