Winner object, "Reveal" dealingStage, fixed dealerService.determineWinner()

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
 							<br><br>
 
 							<!-- Display community cards w/ all corresponding buttons -->
-							<app-community [community]="this.dealerService.community" [dealingStage]="this.dealingStage"></app-community>
+							<app-community [community]="this.dealerService.community" [dealingStage]="this.dealingStage" [winners]="this.winners"></app-community>
 							<br>
 
 							<!-- Redeals all cards -->
