--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,7 +74,7 @@
 							<!-- TODO: SHOULD BE DELETED WHEN FINISHED TESTING!!!!!! -->
 							<p-button label="Change User (FOR TESTING PURPOSES ONLY)" (click)="incrementUserId()" />
 							<!-- Left blank for player actions (fold check etc idk) -->
-							<p-button label="Action" ></p-button>
+							<p-button label="Fold" (click)="fold()" ></p-button>
 							<p-button label="Action" ></p-button>
 						</div>
 					}
