--- a/src/app/player/player.component.css
+++ b/src/app/player/player.component.css
@@ -20,3 +20,12 @@ h2 {
   gap: 10px;               /* Optional: space between cards */
   padding: 20px;           /* Optional: padding around the container */
 }
+
+.red-screen {
+    background-color: #FF3355;
+    color: white;
+    height: 100%;
+    width: 100%;
+    padding: 10%;
+    border-radius: 15px;
+}
