--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
 						<div class="larger-text">
 							<h1>PokerParty!</h1>
 							<h4>Welcome!<br>Click below to either host or join a game.</h4>
+							<h4>TEST</h4>
 						</div>
 						<br>
 						<!-- User wants to host a lobby, set choosingMode to false and isHost to true. Also, generate join code here. -->
@@ -72,10 +73,9 @@
 							<p-button label="Back" (click)="leaveGame()"></p-button>
 							<app-player [player]="this.player"></app-player>
 							<!-- TODO: SHOULD BE DELETED WHEN FINISHED TESTING!!!!!! -->
-							<p-button label="Change User (FOR TESTING PURPOSES ONLY)" (click)="incrementUserId()" />
+							<!-- <p-button label="Change User (FOR TESTING PURPOSES ONLY)" (click)="incrementUserId()" /> -->
 							<!-- Left blank for player actions (fold check etc idk) -->
-							<p-button label="Fold" (click)="fold()" ></p-button>
-							<p-button label="Action" ></p-button>
+							<p-button label="Fold" (click)="fold()" severity="danger"></p-button>
 						</div>
 					}
 					@else {
