--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 				<div class="general-content">
 					<p-card>
 						<div class="larger-text">
-							<h1>PokerParty!</h1>
+							<h1>pokerparty!</h1>
 							<h4>Welcome!<br>Click below to either host or join a game.</h4>
 						</div>
 						<br>
