--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,7 +26,7 @@
 }
 
 .content-wrapper {
-    width: 1000px;
+    width: max-width;
     /* margin-left: calc(50% - 50%/2); */
     /* margin-top: 25vh; */
 }
@@ -36,6 +36,7 @@ h1 {
 	font-size: 50px;
 	font-weight: bold;
 	font-style: italic;
+  text-align: center;
 }
 
 h2 {
@@ -46,7 +47,7 @@ h2 {
 	h1 {
 		margin: 75px;
 		margin-top: 30px;
-		font-size: 100px;
+		font-size: 40px;
 		font-weight: bold;
 		font-style: italic;
 	}
@@ -54,4 +55,8 @@ h2 {
 		margin: 50px;
 		font-size: 20px;
 	}
+}
+
+.gameCode {
+  color: white;
 }
